# data-agent

data-agent_backend/: .gitignore  README.md  main.py  pyproject.toml
data-agent_backend/app/agent/: context.py  graph.py  llm.py  state.py
data-agent_backend/app/agent/node/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validata_sql.py
data-agent_backend/app/api/: dependencies.py
data-agent_backend/app/api/routers/: query_router.py
data-agent_backend/app/api/schemas/: query_schema.py
data-agent_backend/app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
data-agent_backend/app/conf/: app_config.py  meta_config.py
data-agent_backend/app/core/: context.py  lifespan.py  log.py
data-agent_backend/app/models/es/: value_info_es.py
data-agent_backend/app/models/mysql/: column_info_mysql.py  table_info_mysql.py
data-agent_backend/app/models/qdrant/: column_info_qdrant.py  metric_info_qdrant.py
data-agent_backend/app/prompt/: prompt_loader.py
data-agent_backend/app/repositories/es/: value_es_repository.py
data-agent_backend/app/scripts/: build_meta_knowledge.py
data-agent_backend/app/services/: meta_knowledge_service.py  query_service.py
data-agent_backend/conf/: app_config.yaml  meta_config.yaml
data-agent_backend/docker/: docker-compose.yaml
data-agent_backend/docker/mysql/: dw.sql  meta.sql
date-agent-frontend/: package.json  (+1 more)
(+4 files in other folders)
