[project]
name = "data-agent-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncmy==0.2.11",
    "cryptography==46.0.4",
    "elasticsearch[async]>=8,<9",
    "greenlet>=3.5.2",
    "huggingface-hub==0.36.0",
    "jieba==0.42.1",
    "langchain==1.2.7",
    "langchain-deepseek==1.0.1",
    "langchain-huggingface==1.2.1",
    "langgraph==1.0.7",
    "loguru==0.7.3",
    "omegaconf==2.3.0",
    "qdrant-client>=1.18.0",
    "sqlalchemy==2.0.46",
]
